# antiword-python

./: .gitignore  README.md  transform_doc.py
antiword-0.37/: CMakeLists.txt  config.h.in  main_u.c  main_u_wapper.c
